# MonitorConfig_RS

./: Cargo.toml  README.md  Release notes.txt
.github/: copilot-instructions.md
docs/: building.md  silent-mode.md
src/: cli.rs  main.rs  monitor.rs  vcp.rs
src/MonitorConfig/API/: ApiException.cs  LogicalDisplay.cs  Utils.cs
src/MonitorConfig/Commands/: GetMonitorCommand.cs
src/MonitorConfig/Native/: NativeMethods.cs
