[package]
name = "monitorconfig"
version = "1.1.0"
authors = ["Scott-Nx <158021536+Scott-Nx@users.noreply.github.com>"]
edition = "2024"
description = "Native Windows CLI tool for managing monitor settings via DDC/CI"
documentation = "https://github.com/Scott-Nx/MonitorConfig_RS/tree/main/docs"
readme = "README.md"
repository = "https://github.com/Scott-Nx/MonitorConfig_RS"
license = "MIT"
keywords = ["monitor", "display", "brightness", "ddc-ci", "windows"]
categories = ["command-line-utilities", "hardware-support", "os::windows-apis"]
exclude = ["docs", "examples"]
publish = false

[features]
# Build without console window for Task Scheduler/background tasks
# Usage: cargo build --release --features gui-subsystem
gui-subsystem = []

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }
clap = { version = "4.5.55", features = ["derive", "cargo"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
